--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Promotion Control V.0.1</title>
+    <title>1 Village 1 Dealer V.0.1</title>
   </head>
   <body>
     <noscript>You need to enable to run app Promotion Control.</noscript>
