--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>1 Village 1 Dealer V.0.1</title>
+    <title>One Village One Dealer V.0.1</title>
   </head>
   <body>
-    <noscript>You need to enable to run app Promotion Control.</noscript>
+    <noscript>You need to enable to run app One Village One Dealer V.0.1.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
